--- a/app/views/admin/saunas/show.html.erb
+++ b/app/views/admin/saunas/show.html.erb
@@ -7,10 +7,11 @@
 
 <div class="container">
   <div class="row">
-    <h4 class="p-3">サウナ詳細</h4>
+    <h4><%= @sauna.name %></h4>
   </div>
-  <div class="py-6 row">
-    <div class="col-md-3 offset-md-1 align-self-center">
+  <div class="row">
+    <div class= "col-md-12">
+      <%= image_tag @sauna.sauna_images[0], size: '500x300' %>
       <% @sauna.sauna_images.each do |image| %>
         <%= image_tag image, size: '100x100' %>
       <% end %>
