--- a/app/views/admin/saunas/show.html.erb
+++ b/app/views/admin/saunas/show.html.erb
@@ -62,6 +62,7 @@
               <th scope="row", class="text-muted">営業中</th>
             <% end %>
           </tr>
+          <%= @sauna.latitude %>
         </tbody>
       </table>
     </div>
